Concept Domain - Switching from Hibernate Mappings to Annotations